1.3 beta 6
- Further improve magnetic grid

1.3 beta 5
- Added support for selecting sound bank on OSX
- Fixed MIDI export when some notes have a volume of 0
- Spanish translation (thanks to Othyro)
- Fix double replace confirmation on OSX (Cocoa)
- Remember in saved Aria files whether unused drums were hidden
- Fix minor leak in CoreAudio player
- Use fancy cursor on OSX when pressing Shift to select more
- Fixed score editor bug that caused bogus silences to appear
- Add dotted notes to magnetic grid
- Improve 'pencil' tool with more accuracy
- Improved display of very small notes

1.3 beta 4
- Added ability to drag-duplicate notes
- Fixed accidentals in score editor working over all octaves
- Fixed incorrect ledger lines in score view and score printing
- Move playback timer to the status bar where it is less intrusive
- Fix reverting to default output when custom output port is not found
- Fixed importing drum tracks from midi (would result in a graphical glitch)
- Fixed potential crash when editing song while recording is activated
- Allow entering raw controller values
- Fixed some potential crashes that could occur if you do weird stuff while recording
- Fixed several bugs in printing
- Other minor improvements to printing

1.3 beta 3
- Added support for recording from MIDI keyboard/instrument
- Added support for multiple program changes (multiple instruments per track)
- Show note names in flats when the key is going in flats
- Allow shift-clicking in measure bar to select more measures
- Shift-clicking on a note that is already selected unselects it
- Fixed what happens when you resize the frame while a track is maximized
- Allow entering precise values in the controller editor
- Allow finer pitch bends
- Fixed a couple minor glitches

1.3 beta 2
- Improved working with more than one editor per track
- Preview values in the controller editor
- Add a Welcome screen instead of quitting when last tab is closed