@@ -31,11 +31,12 @@ using namespace AriaMaestosa::Action;
 
 // --------------------------------------------------------------------------------------------------------
 
-AddTrack::AddTrack() :
+AddTrack::AddTrack(Track* model) :
     //I18N: (undoable) action name
     MultiTrackAction( _("add track") )
 {
-    m_added_track     = NULL;
+    m_added_track = NULL;
+    m_model       = model;
 }
 
 // --------------------------------------------------------------------------------------------------------
@@ -58,6 +59,45 @@ void AddTrack::undo()
 void AddTrack::perform()
 {
     m_added_track = m_sequence->addTrack();
+    
+    if (m_model != NULL)
+    {
+        m_added_track->setMuted(m_model->isMuted());
+        m_added_track->setInstrument(m_model->getInstrument());
+        m_added_track->setDrumKit(m_model->getDrumKit());
+        
+        m_added_track->setNotationType(SCORE,      m_model->isNotationTypeEnabled(SCORE));
+        m_added_track->setNotationType(KEYBOARD,   m_model->isNotationTypeEnabled(KEYBOARD));
+        m_added_track->setNotationType(GUITAR,     m_model->isNotationTypeEnabled(GUITAR));
+        m_added_track->setNotationType(DRUM,       m_model->isNotationTypeEnabled(DRUM));
+        m_added_track->setNotationType(CONTROLLER, m_model->isNotationTypeEnabled(CONTROLLER));
+
+        m_added_track->setName(m_model->getName());
+        
+        KeyType key = m_model->getKeyType();
+        switch (key)
+        {
+            case KEY_TYPE_SHARPS:
+                m_added_track->setKey(m_model->getKeySharpsAmount(), KEY_TYPE_SHARPS);
+                break;
+                
+            case KEY_TYPE_FLATS:
+                m_added_track->setKey(m_model->getKeyFlatsAmount(), KEY_TYPE_FLATS);
+                break;
+                
+            case KEY_TYPE_C:
+                m_added_track->setKey(0, KEY_TYPE_C);
+                break;
+                
+            case KEY_TYPE_CUSTOM:
+                break;
+        }
+        
+        
+        m_added_track->getMagneticGrid()->setDivider( m_model->getMagneticGrid()->getDivider() );
+        m_added_track->getMagneticGrid()->setDotted( m_model->getMagneticGrid()->isDotted() );
+        m_added_track->getMagneticGrid()->setTriplet( m_model->getMagneticGrid()->isTriplet() );
+    }
 }
 
 // --------------------------------------------------------------------------------------------------------
