@@ -1,5 +1,6 @@
 1.3 beta 6
 - Further improve magnetic grid
+- Add "Duplicate track" feature
 
 1.3 beta 5
 - Added support for selecting sound bank on OSX
